update swagger for shop
